// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsView should render check for updates completed, with everything up to date 1`] = `
<WithScrollbarContainer>
  <div
    className="settings-pane-container"
  >
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Updates
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Check for updates
          </Button>
        </Col>
      </Row>
      <p
        className="small text-muted"
      >
        Last update check performed:
         
        2017-02-03 13:41:36
      </p>
      <Toggle
        id="checkForUpdates"
        isToggled={false}
        label="Check for updates at startup"
        onToggle={[Function]}
        variant="primary"
      />
    </Card>
    <Card
      body={true}
      id="app-sources"
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            App sources
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Add source
          </Button>
        </Col>
      </Row>
    </Card>
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Usage statistics
          </CardTitle>
        </Col>
      </Row>
      <Row
        noGutters={false}
      >
        <Col>
          <Toggle
            id="checkForShare"
            isToggled={false}
            label="Collect anonymous usage data"
            onToggle={[Function]}
            variant="primary"
          />
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Show agreement
          </Button>
        </Col>
      </Row>
    </Card>
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={true}
    >
      <ModalHeader
        closeButton={false}
        closeLabel="Close"
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        All apps are up to date.
      </ModalBody>
      <ModalFooter>
        <Button
          active={false}
          disabled={false}
          onClick={[Function]}
          variant="outline-primary"
        >
          Got it
        </Button>
      </ModalFooter>
    </Modal>
    <InputLineDialog
      isVisible={false}
      onCancel={[Function]}
      onOk={[Function]}
      placeholder="https://..."
      subtext="The source file must be in .json format"
      title="Add source"
    />
    <div />
  </div>
</WithScrollbarContainer>
`;

exports[`SettingsView should render check for updates completed, with updates available 1`] = `
<WithScrollbarContainer>
  <div
    className="settings-pane-container"
  >
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Updates
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Check for updates
          </Button>
        </Col>
      </Row>
      <p
        className="small text-muted"
      >
        Last update check performed:
         
        2017-02-03 13:41:36
      </p>
      <Toggle
        id="checkForUpdates"
        isToggled={false}
        label="Check for updates at startup"
        onToggle={[Function]}
        variant="primary"
      />
    </Card>
    <Card
      body={true}
      id="app-sources"
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            App sources
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Add source
          </Button>
        </Col>
      </Row>
    </Card>
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Usage statistics
          </CardTitle>
        </Col>
      </Row>
      <Row
        noGutters={false}
      >
        <Col>
          <Toggle
            id="checkForShare"
            isToggled={false}
            label="Collect anonymous usage data"
            onToggle={[Function]}
            variant="primary"
          />
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Show agreement
          </Button>
        </Col>
      </Row>
    </Card>
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={true}
    >
      <ModalHeader
        closeButton={false}
        closeLabel="Close"
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        One or more updates are available. Go to the apps screen to update.
      </ModalBody>
      <ModalFooter>
        <Button
          active={false}
          disabled={false}
          onClick={[Function]}
          variant="outline-primary"
        >
          Got it
        </Button>
      </ModalFooter>
    </Modal>
    <InputLineDialog
      isVisible={false}
      onCancel={[Function]}
      onOk={[Function]}
      placeholder="https://..."
      subtext="The source file must be in .json format"
      title="Add source"
    />
    <div />
  </div>
</WithScrollbarContainer>
`;

exports[`SettingsView should render empty div while loading 1`] = `
<WithScrollbarContainer>
  <div
    className="settings-pane-container"
  >
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Updates
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Check for updates
          </Button>
        </Col>
      </Row>
      <p
        className="small text-muted"
      />
      <Toggle
        id="checkForUpdates"
        isToggled={true}
        label="Check for updates at startup"
        onToggle={[Function]}
        variant="primary"
      />
    </Card>
    <Card
      body={true}
      id="app-sources"
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            App sources
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Add source
          </Button>
        </Col>
      </Row>
    </Card>
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Usage statistics
          </CardTitle>
        </Col>
      </Row>
      <Row
        noGutters={false}
      >
        <Col>
          <Toggle
            id="checkForShare"
            isToggled={false}
            label="Collect anonymous usage data"
            onToggle={[Function]}
            variant="primary"
          />
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Show agreement
          </Button>
        </Col>
      </Row>
    </Card>
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={false}
    >
      <ModalHeader
        closeButton={false}
        closeLabel="Close"
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        All apps are up to date.
      </ModalBody>
      <ModalFooter>
        <Button
          active={false}
          disabled={false}
          onClick={[Function]}
          variant="outline-primary"
        >
          Got it
        </Button>
      </ModalFooter>
    </Modal>
    <InputLineDialog
      isVisible={false}
      onCancel={[Function]}
      onOk={[Function]}
      placeholder="https://..."
      subtext="The source file must be in .json format"
      title="Add source"
    />
    <div />
  </div>
</WithScrollbarContainer>
`;

exports[`SettingsView should render when checking for updates 1`] = `
<WithScrollbarContainer>
  <div
    className="settings-pane-container"
  >
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Updates
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={true}
            onClick={[Function]}
            variant="outline-primary"
          >
            Checking...
          </Button>
        </Col>
      </Row>
      <p
        className="small text-muted"
      />
      <Toggle
        id="checkForUpdates"
        isToggled={false}
        label="Check for updates at startup"
        onToggle={[Function]}
        variant="primary"
      />
    </Card>
    <Card
      body={true}
      id="app-sources"
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            App sources
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Add source
          </Button>
        </Col>
      </Row>
    </Card>
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Usage statistics
          </CardTitle>
        </Col>
      </Row>
      <Row
        noGutters={false}
      >
        <Col>
          <Toggle
            id="checkForShare"
            isToggled={false}
            label="Collect anonymous usage data"
            onToggle={[Function]}
            variant="primary"
          />
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Show agreement
          </Button>
        </Col>
      </Row>
    </Card>
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={false}
    >
      <ModalHeader
        closeButton={false}
        closeLabel="Close"
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        All apps are up to date.
      </ModalBody>
      <ModalFooter>
        <Button
          active={false}
          disabled={false}
          onClick={[Function]}
          variant="outline-primary"
        >
          Got it
        </Button>
      </ModalFooter>
    </Modal>
    <InputLineDialog
      isVisible={false}
      onCancel={[Function]}
      onOk={[Function]}
      placeholder="https://..."
      subtext="The source file must be in .json format"
      title="Add source"
    />
    <div />
  </div>
</WithScrollbarContainer>
`;

exports[`SettingsView should render with check for updates disabled 1`] = `
<WithScrollbarContainer>
  <div
    className="settings-pane-container"
  >
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Updates
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Check for updates
          </Button>
        </Col>
      </Row>
      <p
        className="small text-muted"
      />
      <Toggle
        id="checkForUpdates"
        isToggled={false}
        label="Check for updates at startup"
        onToggle={[Function]}
        variant="primary"
      />
    </Card>
    <Card
      body={true}
      id="app-sources"
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            App sources
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Add source
          </Button>
        </Col>
      </Row>
    </Card>
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Usage statistics
          </CardTitle>
        </Col>
      </Row>
      <Row
        noGutters={false}
      >
        <Col>
          <Toggle
            id="checkForShare"
            isToggled={false}
            label="Collect anonymous usage data"
            onToggle={[Function]}
            variant="primary"
          />
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Show agreement
          </Button>
        </Col>
      </Row>
    </Card>
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={false}
    >
      <ModalHeader
        closeButton={false}
        closeLabel="Close"
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        All apps are up to date.
      </ModalBody>
      <ModalFooter>
        <Button
          active={false}
          disabled={false}
          onClick={[Function]}
          variant="outline-primary"
        >
          Got it
        </Button>
      </ModalFooter>
    </Modal>
    <InputLineDialog
      isVisible={false}
      onCancel={[Function]}
      onOk={[Function]}
      placeholder="https://..."
      subtext="The source file must be in .json format"
      title="Add source"
    />
    <div />
  </div>
</WithScrollbarContainer>
`;

exports[`SettingsView should render with check for updates enabled 1`] = `
<WithScrollbarContainer>
  <div
    className="settings-pane-container"
  >
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Updates
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Check for updates
          </Button>
        </Col>
      </Row>
      <p
        className="small text-muted"
      />
      <Toggle
        id="checkForUpdates"
        isToggled={true}
        label="Check for updates at startup"
        onToggle={[Function]}
        variant="primary"
      />
    </Card>
    <Card
      body={true}
      id="app-sources"
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            App sources
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Add source
          </Button>
        </Col>
      </Row>
    </Card>
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Usage statistics
          </CardTitle>
        </Col>
      </Row>
      <Row
        noGutters={false}
      >
        <Col>
          <Toggle
            id="checkForShare"
            isToggled={false}
            label="Collect anonymous usage data"
            onToggle={[Function]}
            variant="primary"
          />
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Show agreement
          </Button>
        </Col>
      </Row>
    </Card>
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={false}
    >
      <ModalHeader
        closeButton={false}
        closeLabel="Close"
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        All apps are up to date.
      </ModalBody>
      <ModalFooter>
        <Button
          active={false}
          disabled={false}
          onClick={[Function]}
          variant="outline-primary"
        >
          Got it
        </Button>
      </ModalFooter>
    </Modal>
    <InputLineDialog
      isVisible={false}
      onCancel={[Function]}
      onOk={[Function]}
      placeholder="https://..."
      subtext="The source file must be in .json format"
      title="Add source"
    />
    <div />
  </div>
</WithScrollbarContainer>
`;

exports[`SettingsView should render with last update check date 1`] = `
<WithScrollbarContainer>
  <div
    className="settings-pane-container"
  >
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Updates
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Check for updates
          </Button>
        </Col>
      </Row>
      <p
        className="small text-muted"
      >
        Last update check performed:
         
        2017-02-03 13:41:36
      </p>
      <Toggle
        id="checkForUpdates"
        isToggled={false}
        label="Check for updates at startup"
        onToggle={[Function]}
        variant="primary"
      />
    </Card>
    <Card
      body={true}
      id="app-sources"
      onDragEnter={[Function]}
      onDragOver={[Function]}
      onDrop={[Function]}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            App sources
          </CardTitle>
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Add source
          </Button>
        </Col>
      </Row>
    </Card>
    <Card
      body={true}
    >
      <Row
        noGutters={false}
      >
        <Col>
          <CardTitle>
            Usage statistics
          </CardTitle>
        </Col>
      </Row>
      <Row
        noGutters={false}
      >
        <Col>
          <Toggle
            id="checkForShare"
            isToggled={false}
            label="Collect anonymous usage data"
            onToggle={[Function]}
            variant="primary"
          />
        </Col>
        <Col
          xs="auto"
        >
          <Button
            active={false}
            disabled={false}
            onClick={[Function]}
            variant="outline-primary"
          >
            Show agreement
          </Button>
        </Col>
      </Row>
    </Card>
    <Modal
      animation={true}
      autoFocus={true}
      backdrop={true}
      dialogAs={
        Object {
          "$$typeof": Symbol(react.forward_ref),
          "displayName": "ModalDialog",
          "render": [Function],
        }
      }
      enforceFocus={true}
      keyboard={true}
      onHide={[Function]}
      restoreFocus={true}
      show={false}
    >
      <ModalHeader
        closeButton={false}
        closeLabel="Close"
      >
        <ModalTitle>
          Update check completed
        </ModalTitle>
      </ModalHeader>
      <ModalBody>
        All apps are up to date.
      </ModalBody>
      <ModalFooter>
        <Button
          active={false}
          disabled={false}
          onClick={[Function]}
          variant="outline-primary"
        >
          Got it
        </Button>
      </ModalFooter>
    </Modal>
    <InputLineDialog
      isVisible={false}
      onCancel={[Function]}
      onOk={[Function]}
      placeholder="https://..."
      subtext="The source file must be in .json format"
      title="Add source"
    />
    <div />
  </div>
</WithScrollbarContainer>
`;
